--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Main Page
 
 <div align="center">
     <p>If you want find someone by id, using query string, you need this.</p>
-    <a href="/by-id?id=1Bc"> http://127.0.0.1:5000/by-id?id=1</a>
+    <a href="/by-id?id=1"> http://127.0.0.1:5000/by-id?id=1</a>
 </div>
 
 {% endblock %}
